; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_ipc_host.c_convert_port_to_pset.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_ipc_host.c_convert_port_to_pset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROCESSOR_SET_NULL = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @convert_port_to_pset(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @PROCESSOR_SET_NULL, align 4
  store i32 %5, i32* %4, align 4
  %6 = load i64, i64* @FALSE, align 8
  store i64 %6, i64* %3, align 8
  br label %7

7:                                                ; preds = %16, %1
  %8 = load i64, i64* %3, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %14, label %10

10:                                               ; preds = %7
  %11 = load i32, i32* %2, align 4
  %12 = call i64 @IP_VALID(i32 %11)
  %13 = icmp ne i64 %12, 0
  br label %14

14:                                               ; preds = %10, %7
  %15 = phi i1 [ false, %7 ], [ %13, %10 ]
  br i1 %15, label %16, label %22

16:                                               ; preds = %14
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @ip_lock(i32 %17)
  %19 = load i32, i32* %2, align 4
  %20 = load i64, i64* @FALSE, align 8
  %21 = call i64 @ref_pset_port_locked(i32 %19, i64 %20, i32* %4)
  store i64 %21, i64* %3, align 8
  br label %7

22:                                               ; preds = %14
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i64 @IP_VALID(i32) #1

declare dso_local i32 @ip_lock(i32) #1

declare dso_local i64 @ref_pset_port_locked(i32, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
